styles/globals.css
/* ... */
.home-right-menu-who-to-follow-content {
    margin-top: 24px;
    margin-left: 54px;
}

.home-right-menu-likes-content img {
    width: 50px;
    height: 50px;
}

.home-right-menu-who-to-follow-content .who-to-follow-user-img {
    width: 50px;
    height: 50px;
}

.home-right-menu-who-to-follow-heading {
    font-size: 20px;
    margin-left: 10px;
    font-weight: bold;
}

.home-right-menu-tags-heading {
    margin-top: 24px;
    font-size: 20px;
    margin-left: 24px;
    font-weight: bold;

}

.home-right-menu-tags-content {
    margin-left: 14px;
    margin-top: 24px;
}

.pointer-cursor {
    cursor: pointer;
}

.home-right-menu-tags-content-pill {
    background: #0E1A2B;
    box-shadow: 0 0 2pt 1pt var(--btn_bg_color);
    color: var(--btn_bg_color);
    border-radius: 10px;
}

/*Horizontal scroll menu CSS*/
.menu-item {
    padding: 0 40px;
    margin: 5px 10px;
    user-select: none;
    cursor: pointer;
    border: none;
}

.scroll-menu-arrow {
    padding: 20px;
    cursor: pointer;
}

.custom-horizontal-menu {
    width: 90%;
}

.custom-menu-wrapper {
    width: 90%;


}

.custom-menu-wrapper-inner {
    margin-right: 100px;
}

.scroll-menu-arrow {
    padding: 15px;
}

.menu-item-wrapper .active {
    border: 0;
    outline: none;
    border: none;
}

.menu-item-wrapper .active {
    border: none;
}

.menu-item.active {
    border: none;
}

.menu-item-wrapper:active {
    border: none;
    display: inline-block;
}

.custom-wrapper {
    border: 0;
    outline: none;
    border: none;
}

.custom-menu-style {
    align-items: start;
}

.custom-menu-inner-wrapper-style {
    transform: translate3d(10px, 0, 0);
    text-align: left;
}

/*.menu-wrapper--inner{*/
/*    transform: tr;*/
/*}*/
/*Horizontal scroll menu CSS*/
.custom-music-detail-page {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    /*padding-top: 60px;*/
    padding-bottom: 100px;
    background: #162332;
}

.custom-user-detail-page {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    padding-bottom: 100px;
    background: #162332;
}

.loggedin-user-profile {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    /*padding-top: 60px;*/
    padding-bottom: 100px;
    background: #162332;
}

.custom-playlist-page {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    padding-top: 60px;
    padding-bottom: 100px;
    background: #162332;
}

.custom-followers-page {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    padding-top: 60px;
    padding-bottom: 100px;
    background: #162332;
}

.custom-followings-page {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    padding-top: 60px;
    padding-bottom: 100px;
    background: #162332;
}

.custom-playlist-title span {
    color: #ffffff;
    font-size: 30px;
    font-weight: bold;
}

.custom-trending-page {
    width: 100%;
    max-height: 100%;
    min-height: 100vh;
    /*padding-top: 60px;*/
    padding-bottom: 100px;
    background: #162332;
}

.custom-blogs-page {
    width: 100%;
    max-height: 100%;
    min-height: 100vh;
    /*padding-top: 60px;*/
    padding-bottom: 100px;
    background: #162332;
}
.ad-custom-style-image{
    max-width: 300px;
    max-height: 300px;
}
.ad-custom-style-description{
    max-width: 300px;
    height: auto;
    position: relative;
}
.custom-music-detail-data-section {
    background: #0E1A2B;
    border-radius: 6px;
    margin: 20px;
    height: auto;
}

.custom-music-detail-data-section .song-title {
    text-align: left;
    font-size: 20px;
    letter-spacing: 0px;
    color: #FFFFFFE6;
    text-transform: capitalize;
    opacity: 1;
}

.custom-music-detail-data-section .song-description {
    text-align: left;
    font-size: 14px;
    letter-spacing: 0px;
    color: #A4A9AF;
    text-transform: capitalize;
    opacity: 1;
}

.custom-music-detail-data-section .song-artist-name {
    text-align: left;
    font-size: 14px;
    letter-spacing: 0px;
    color: #00DAC8;
    text-transform: capitalize;
    opacity: 1;
}

.custom-music-detail-data-section .likes-count {
    text-align: left;
    font-size: 10px;
    letter-spacing: 0px;
    color: #00DAC8;
    text-transform: capitalize;
    opacity: 1;
}

.custom-music-detail-comment-section {
    background: #0E1A2B;
    border-radius: 6px;
    margin: 20px;
    padding: 20px;
    height: auto;
}

.custom-music-detail-related-tracks-section {
    background: #0E1A2B;
    border-radius: 6px;
    margin: 20px;
    padding: 20px;
    height: auto;
}

.custom-music-detail-bottom-section {

}

.custom-music-detail-bottom-section .row {
    margin: 0px;
}

.custom-music-detail-related-tracks-section .custom-related-tracks-heading {
    text-align: left;
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 0px;
    color: #FFFFFFE6;
    text-transform: capitalize;
    opacity: 1;
}

.custom-music-detail-related-tracks-section {
    color: #ffffff;
}

.custom-music-detail-related-tracks-section .likes-count {
    color: #ffffff;
    opacity: 0.5;
}

.custom-login-button {
    background: #00DAC8;
    color: #000000;
    font-size: 14px;
    font-weight: bold;
}

.custom-forgot-password {
    color: #00DAC8;
    font-weight: bold;
    font-size: 14px;
}

.custom-login-register-text {
    font-size: 14px;
    font-weight: normal;
    color: #A4A9AF;
}

.custom-login-register-text a {
    font-size: 16px;
    font-weight: bold;
    color: #00DAC8;
}

.custom-trending-heading {
    margin-top: 30px;
    font-size: 30px;
    font-weight: bold;
    color: #ffffff;
}

.custom-blogs-heading {
    margin-top: 30px;
    margin-left: 60px;
    font-size: 30px;
    font-weight: bold;
    color: #ffffff;
}

.custom-trending-item-bg {
    background: #0E1A2B;
    border-radius: 6px;
    height: auto;
    margin: 10px
}
.custom-blog-detail-img{
    max-height: 300px;
    width: auto;
}
.custom-blogs-item-bg {
    background: #0E1A2B;
    border-radius: 6px;
    height: auto;
    margin: 10px
}
/* ... */

